--- a/assets/css/tlogin.css
+++ b/assets/css/tlogin.css
@@ -1,262 +1,251 @@
 :root{
     --primary: #E0E1DD;
-    --secondary: #0D1B2A ;
-    --dark: #1B263B;
-    --light: #5d738f;
-    --mid: #1B263B;
-}
+    --green: rgb(22, 147, 68);
+    --blue: #0ea5e9;
+    --pink: #db488a;
 
+    --pop: 'Poppins', sans-serif;
+}
 
 body, html {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  min-height: 100vh;
+  font-family: "Comfortaa", sans-serif;
+  background-color: rgba(255, 255, 255, 0.95);
+  overflow-x: hidden !important;
 }
 
-section{
-  background-color: var(--primary);
-  height: 100vh;
-  background-image: url("../../images/639f4c15ad4f90afa630803e745a543e213f21ff.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.no_acc2{
+  display: none;
 }
 
-
-.navbar {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  font-size: 1.3rem;
-  background-color: transparent !important ;
-  background: rgba(255, 255, 255, 0.1) !important; 
-  box-shadow: 0 3px 8px 0 var(--light);
-  backdrop-filter: blur(15px) !important; 
-  -webkit-backdrop-filter: blur(10px); 
-  border: 1px solid rgba(255, 255, 255, 0.18) !important;
-
+nav{
+  background-color: transparent !important;
+  padding-top: 15px !important;
 }
 
 .navbar-brand{
-  display: flex !important;
-  flex-direction: row !important;
+  display: flex;
+  gap: 10px;
   align-items: center;
-  justify-content: space-between;
-}
-
-.navbar-brand img {
-  width: 35px !important;
-  height: auto;
+  justify-content: center;
 }
 
 .navbar-brand p{
-  color: var(--secondary) !important;
-  letter-spacing: 3px;
-  font-size: 1.8rem;
-  font-weight: 600;
-  padding-top: 8px;
-  margin-left: 10px;
-}
-
-.btn {
-  font-size: 1.2rem !important;
-  padding: 0.5rem 1rem;
-}
-
-
-main{
-  display: flex;
-
-}
-
-.colored{
-  color: var(--light);
-}
-
-.details{
-  margin-left: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  text-align: left;
-  width: 500px;
-  padding-bottom: 15px;
-}
-
-.form_cont p{
-  color: var(--light);
-  font-size: 1.2rem;
-}
-
-.form_cont h6{
-  color: var(--light);
+  margin: 0 !important;
+  padding: 0 !important;
+  font-weight: 900;
   font-size: 1.4rem;
-  font-weight: 600;             
   letter-spacing: 1px;
 }
 
-.form_cont h1{
-  color: var(--secondary);
-  font-size: 2.5rem;
-}
-
-.form_cont a{
+nav p a{
+  color: var(--pink);
   text-decoration: none;
-  color: var(--mid);
-  font-size: 1.2rem;
+  transition: all 300ms ease-in-out;
 }
 
-.form{
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+nav p a:hover{
+  color: #b30955;
 }
 
-.form_cont{
-  width: 700px;
-  display: flex;
-  flex-direction: column !important;
-  justify-content: center;
-  align-items: start;
-  background: rgba(255, 255, 255, 0.1) !important; 
-  border-radius: 15px;
-  padding: 2rem;
-  box-shadow: 0 5px 22px 0 var(--light);
-  backdrop-filter: blur(15px) !important; 
-  -webkit-backdrop-filter: blur(10px); 
-  border: 1px solid rgba(255, 255, 255, 0.18) !important;
+nav p{
+  margin: 0;
 }
 
-form{
-  max-width: 100%;
+.text-span{
+  color: var(--pink);
 }
 
-.form-control{
-  background-color: transparent;
-  color: var(--secondary) !important;
-  border: solid 2px var(--light);
-  height: 45px !important;
-  width: 100%;
-  font-size: 1.4rem;
-}
-
-label{
-  font-size: 1.4rem;
-  color: var(--secondary) !important;
-}
-
-.submit{
-  background-color: var(--dark);
-  color: var(--primary);
-  border: none;
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-}
-
-.submit:hover{
-  background-color: var(--secondary);
-}
-
-
-.form-control:focus {
-  border-color: var(--secondary) !important; 
-  box-shadow: none !important;         
-  outline: none !important;           
-  background-color: transparent !important; 
-  color: var(--secondary) !important;       
-}
-
-
-#typedText {
-  color: var(--mid);
-  font-size: 1.5em;
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
+.hands {
   position: absolute;
-  top: 15%;
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  border-right: 2px solid var(--mid);
-  animation: blink-caret 0.75s step-end infinite;
-  margin: 0 auto;
+  z-index: -1;
+}
+
+.staticHand {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -3;
+  display: none;
 }
 
 
+.hand1{
+  position: absolute;
+  left: 0;
+  bottom: -70px;
+  height: 750px;
+  width: auto;
+  animation: leftHand 5s infinite;
+}
 
-.hero-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--dark);
-  text-align: center;
-} 
-
-
-
-
-
-@keyframes blink-caret {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: var(--mid);
-  }
+.hand2{
+  position: absolute;
+  right: 0;
+  top: -50px;
+  height: 750px;
+  width: auto;
+  animation: rightHand 5s infinite;
 }
 
 
+@media screen and (max-width: 1079px) {
+  .staticHand {
+    display: block;
+  }
 
-@media screen and (max-width: 765px) {
 
-  .urgent_div p {
+  .hand1{
     display: none;
   }
 
-  #typedText {
-    font-size: 1.2rem;
-  }
-
+  .hand2{
+    display: none;
+  } 
 }
 
 
-@media screen and (max-width: 575px) {
-  .navbar-brand p{
-    font-size: 1.4rem;
-  }
+.form_cont{
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+}
 
-  .form_cont{
-    width: 100vw;
-  }
+.form_cont h1{
+  font-family: var(--pop);
+  font-weight: 700;
+}
 
-  .form-control{
-    width: 100%;
-  }
+.form_cont .intro{
+  text-align: center;
+  font-size: 0.9rem;
+}
 
-  .submit{
-    width: 100%;
-  }
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-items: center;
+}
 
-  .form_cont p{
-    color: var(--light);
-    font-size: 1.2rem;
-  }
+label{
+  font-weight: 900;
+  padding-left: 15px;
+}
 
-  .form_cont h6{
-    color: var(--light);
-    font-size: 0.95rem;
-    font-weight: 500;
-  }
+input{
+  border-radius: 25px !important;
+  padding: 10px 18px !important;
+  border-color: gray;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  transition: all 300ms ease-in-out;
+}
 
-  .form_cont h1{
-    color: var(--secondary);
-    font-size: 1.8rem;
-  }
+input:focus{
+  outline: none !important;
+  border-color: var(--pink) !important;
+  box-shadow: none !important;
+  transition: all 300ms ease-in-out;
+}
+
+
+
+
+.lines{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lines p{
+  margin: 0;
+  padding: 0 15px;
+}
+
+.line{
+  width: 80px;
+  height: 1.3px;
+  background-color: black;
+  border-radius: 40px;
+}
+
+.sign_option{
+  display: flex;
+  gap: 20px;
+}
+
+.options{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 20px;
+  padding: 5px 25px;
+  border-radius: 30px;
+  border: solid 1.5px black;
+  font-size: 0.9rem;
+  background-color: transparent;
+  transition: all 300ms ease-in-out;
+}
+
+.options p{
+  margin: 0;
+}
+
+.options:hover{
+  background-color: rgba(240, 137, 183, 0.2);
+}
+
+
+
+
+
+.submit {background-image: linear-gradient(to right, rgb(218, 51, 131) 0%, #e1a1d0  51%, rgb(218, 51, 131)  100%)}
+.submit {
+  color: white;
+  border: none;
+  transition: all 500ms ease-in-out;
+  background-size: 200% auto;
+}
+
+.submit:hover {
+  background-position: right center; 
+}
+     
+
+
+.forgot{
+  text-decoration: none;
+  color: var(--pink);
+  transition: all 300ms ease-in-out;
+}
+
+.forgot:hover{
+  color: #b30955;
+}
+
+.no_acc2{
+    padding-top: 30px;
+}
+
+.no_acc2 a{
+  text-decoration: none;
+  color: var(--pink);
+  transition: all 300ms ease-in-out;
+}
+
+.no_acc2 a:hover{
+  color: #b30955;
 }
 
 .email_div{
@@ -268,35 +257,111 @@ label{
 }
 
 
+.input-wrapper {
+  position: relative;
+}
+
+.input-wrapper input {
+  padding-right: 35px; /* make space for icon inside input */
+}
 
 .eye-icon {
-    position: absolute;
-    right: 10px;
-    top: 55%;
-    cursor: pointer;
-    font-size: 16px;
-    color: var(--light);
-    transition: color 0.3s;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 14px;
+  color: gray;
+  transition: all 300ms ease-in-out;
 }
-
-.eye-icon:hover {
-    color: var(--dark);
-}
-
 
 .mail_icon{
   position: absolute;
-  right: 10px;
   top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
   cursor: pointer;
-  font-size: 16px;
-  color: var(--light);
-  transition: color 0.3s;
+  font-size: 14px;
+  color: gray;
+  transition: all 300ms ease-in-out;
 }
 
-.mail_icon:hover{
-    color: var(--dark);
+
+
+.eye-icon:hover {
+    color: black;
 }
+
+
+.mail_icon:hover{
+    color: black;
+}
+
+
+
+footer a{
+  text-decoration: none;
+  color: var(--pink);
+  transition: all 300ms ease-in-out;
+}
+
+
+footer a:hover{
+  color: #b30955;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+  .no_acc1{
+    display: none;
+  }
+
+  .no_acc2{
+    display: block;
+  }
+}
+
+
+
+
+
+
+
+@keyframes leftHand{
+
+  0%, 100%{
+    transform: translate(0, 0);
+    animation-timing-function: ease-in-out;
+  }
+
+  50%{
+    transform: translate(-50px, 40px);
+    animation-timing-function: ease-in-out;
+  }
+
+}
+
+
+@keyframes rightHand{
+
+  0%, 100%{
+    transform: translate(0, 0);
+    animation-timing-function: ease-in-out;
+  }
+
+  50%{
+    transform: translate(50px, -40px);
+    animation-timing-function: ease-in-out;
+  }
+
+}
+
+
+
+
 
 
 
