--- a/chat/chat.css
+++ b/chat/chat.css
@@ -63,10 +63,6 @@ img{
     width: 100%;
 }
 
-h1{
-    font-weight: 800;
-    font-size: 1.8rem;
-}
 
 h2{
     font-size: 1.4rem;
@@ -112,18 +108,7 @@ aside{
     height: 100vh;
 }
 
-.menu{
-    display: none;
-    padding-left: 20px;
-}
 
-.menu button{
-    background-color: transparent;
-}
-
-.menu span{
-    font-size: 2.5rem;
-}
 
 aside .top{
     display: flex;
@@ -213,11 +198,11 @@ aside .sidebar a.active::before{
     content: '';
     width: 6px;
     height: 100%;
-    background-color: var(--pink);
+    background-color: var(--color-dark);
 }
 
 aside .sidebar a.active span{
-    color: var(--pink);
+    color: var(--color-dark);
     margin-left: calc(1rem - 3px);
 }
 
@@ -272,225 +257,111 @@ main{
     margin-left: -7px;
 }
 
-.main_head .cta_button a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    padding: 8px;
-    border-radius: 18px;
-    height: 3.8rem;
-    width: 17rem;
-    text-decoration: none;
-}
-
-.main_head .cta_button a p{
-    font-size: 1.1rem;
-    color: white;
-    font-weight: 500;
-    font-family: "Comfortaa", sans-serif;
-}
-
-.main_head .cta_button a span{
-    color: white;
-}
-
-
-.main_head .cta_button a {background-image: linear-gradient(to right, rgb(198, 30, 111) 0%, #e463ac  51%, rgb(198, 30, 111)  100%)}
-.main_head .cta_button a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    padding: 8px;
-    border-radius: 18px;
-    height: 3rem;
-    width: 16rem;
-    gap: 10px;
-    border: none;
-    transition: all 300ms ease-in-out;
-    transition: 0.5s;
-    background-size: 200% auto;
-}
-
-.main_head .cta_button a:hover {
-    background-position: right center; 
-}
      
 
 .hero_cont{
-    width: 97%;
-    height: 97%;
+    width: 100%;
+    height: 100%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: right;
+    overflow: scroll;
     /* background: radial-gradient(circle,#caaee5 0%, #fc9bc8 100%); */
 }
 
-.hero_cont p{
-    font-size: 1.2rem;
-    margin-bottom: 10px;
+.hero_cont .title{
+    width: 100%;
+    padding: 0px 35px;
 }
 
-.hero_cont h1{
+.hero_cont .title h1 span{
+    color: var(--pink);
+}
+
+.hero_cont .title h1{
+    font-weight: 800;
     font-family: var(--pop);
-    font-size: 4rem;
-}
-
-.hero_cont h2{
-    margin-bottom: 10px;
+    padding-left: 8px;
 }
 
 
+.hero_cont .content{
+    height: 90%;
+    width: 100%;
+    padding: 0 20px;
+}
 
+.hero_cont .content {
+    display: flex;
+    flex-direction: column;
+}
 
-
-
-
-
-@media screen and (max-width: 1200px){
-    .container{
-        width: 96%;
-        grid-template-columns: 7rem auto;
-    }
-
-    aside .logo{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0;
-    }
-
-    aside .logo  h2 {
-        display: none;
-    }
-
-    aside .sidebar h3{
-        display: none;
-    }
-
-    aside .sidebar a{
-        width: 5.6rem;
-    }
-
+.hero_cont .content .container{
+    display: flex;
+    flex-direction: column;
+    height: 90%;
 }
 
 
+.chat{
+    height: 100%;
+}
 
 
-@media screen and (max-width: 758px){
+#chat-form input{
+    height: 40px;
+    width: 90%;
+    padding: 0 15px;
+    background-color: transparent;
+}
 
-    .container{
-        width: 100%;
-        grid-template-columns: 1fr;
-    }
+.send-div{
+    display: flex;
+    height: 40px;
+    width: 100%;
+    padding: 0 3px;
+    background-color: white;
+}
 
-    @keyframes showMenu{
-        from {
-            transform: translateX(-100%);
-        }
-        to {
-            transform: translateX(0);
-        }
-    }
+.send-div input{
+    width: 98%;
+}
 
-
-    aside.showMenu {
-        animation: showMenu 500ms ease forwards;
-    }
-    
-
-    @keyframes closeMenu{
-        from {
-            transform: translateX(0);
-        }
-        to {
-            transform: translateX(-100%);
-        }
-    }
-
-    .cta_button{
-        display: none;
-    }
-
-    .menu{
-        display: block;
-    }
-
-
-    aside.closeMenu{
-        animation: closeMenu 500ms ease forwards;
-    }
-
-
-    aside{
-        position: fixed;
-        background-color: var(--color-white);
-        width: 18rem;
-        z-index: 3;
-        box-shadow: 1rem 3rem 4rem var(--color-light);
-        height: 100vh;
-        padding-right: var(--card-padding);
-        display: none;
-    }
-
-
-    
-
-    aside .logo{
-        margin-left: 1rem;
-    }
-
-    aside .logo h2{
-        display: inline;
-        padding-left: 8px;
-    }
-
-    aside .sidebar h3{
-        display: inline;
-    }
-
-    aside .sidebar a{
-        width: 100%;
-        height: 3.4rem;
-    }
-
-    aside .close{
-        display: inline-block;
-        cursor: pointer;
-        padding-right: 7px;
-    }
-
-   
+.send-div button{
+    width: 2%;
+    background-color: transparent;
 }
 
 
 
 
+.chat-box {
+    height: 100%;
+    overflow-y: auto;
+    padding: 10px;
+    background: transparent;
+    border: 1px solid #ccc;
+    margin-bottom: 14px;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.chat-bubble {
+    max-width: 70%;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 12px;
+    word-wrap: break-word;
+}
+.you {
+    background-color: #d4edda;
+    color: #155724;
+    align-self: flex-end;
+    margin-left: auto;
+}
+.other {
+    background-color: #cce5ff;
+    color: #004085;
+    align-self: flex-start;
+    margin-right: auto;
+}
