--- a/questionnaire/question.css
+++ b/questionnaire/question.css
@@ -108,6 +108,10 @@ body, html {
 
 .home{
   padding-bottom: 30px;
+  background-image: url(../images/cloud.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .submit_btn {background-image: linear-gradient(to right, rgb(218, 51, 131) 0%, #f09ad4  51%, rgb(218, 51, 131)  100%)}
