--- a/questionnaire/help.css
+++ b/questionnaire/help.css
@@ -306,8 +306,7 @@ main{
     align-items: center !important;
     padding-bottom: 30px !important;
     /* background: radial-gradient(circle,#caaee5 0%, #fc9bc8 100%); */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url(../images/chat_bg.png);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-image: url(../images/cloud.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
